	better.
	Add a function reference $line_command and a hash %line_command_map
	for processing line @-commands and use it for @title, @subtitle and 
	@author, with a corresponding change in the titlepage formatting 
	also allowing to have something more in line with what texi2dvi 
	produces.
	verbatiminclude is now a $raw command argument distinct from 
	verbatim.

2009-04-23   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: use the float name and number as 
	cross-reference name.

2009-04-16   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: really pass the original @-command for @def*.

2009-04-16   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: normalize the inter-spaces in definition arguments.

2009-04-14   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: give the command name in \&def
	argument.

2009-04-05   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: call tab_item_texi after closing formats.

2009-04-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: add a user hook for closed empty preformatted.

2009-04-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, examples/: modify directly the 
	texinfo for table items. \&table_item API changed correspondingly.
	remove spaces in @(v|t)table @item better.
	Give information about the context for substitute_line, and other 
	contexts when paragraphs should not appear, and also give context
	of close_paragraph to be able to deliver an error message stating
	that something triggering paragraph closing happened while it
	shouldn't have..
	Change the System Identifier to be conformant with what w3c now
	wants (report from Andreas Lochmann).
	* texi2html.pl: Split close_stack_texi_structure in 
	close_stack_texi and close_stack_structure, and close directly 
	in these functions instead of constructing a string to resume 
	processing.
	Use a hash instead of an array for index entries, and give 